PSoC/00_Basic_Tx.cydsn/REBUILD.log
--------------- Rebuild Started: 12/06/2018 15:00:51 Project: 00_Basic_Tx, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyScBoostClk.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MISO.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SS.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\IRQ.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_IRQ.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CE.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\nRF24_FUNCS.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\nRF24_HAL.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\nRF24_COMMANDS.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MOSI.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SCLK.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPI.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPI_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPI_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ThrottlePin.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SPI_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_throttle_Fall.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\N1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\N2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\P1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\P2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\speaker.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWMSend.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWMSend_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_send.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ServoClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ServoPWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SteeringPin.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\isr_steering_Fall.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWMHBro.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWMHBro_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWMServo.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWMServo_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SteeringTimer.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SteeringTimer_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HBroClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\00_Basic_Tx.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\00_Basic_Tx.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\00_Basic_Tx.map"
Deleting file ".\00_Basic_Tx.cycdx"
Deleting file ".\00_Basic_Tx.svd"
Deleting file ".\00_Basic_Tx.rpt"
Deleting file ".\00_Basic_Tx_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\Alexander Nielsen\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Alexander Nielsen\Desktop\platooning\PSoC\00_Basic_Tx.cydsn\00_Basic_Tx.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Alexander Nielsen\Desktop\platooning\PSoC\00_Basic_Tx.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
Unable to add item 'isr_send' to 'PSoC5'. 'A file of the given name already exists. Please enter a valid name.'
Unable to add item 'isr_send' to 'PSoC5'. 'A file of the given name already exists. Please enter a valid name.'
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c:28:27: error: initializer element is not constant
     const uint16 t_center=(t_left+t_right)/2;
                           ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 12/06/2018 15:01:50 ---------------
